<resources>
    <string name="app_name">Discover Oak Glen</string>
    <string name="main_title">Oak Glen</string>
    <string name="subtitle">Discover</string>
    <string name="thumbnail_description">Chapter Preview</string>
    <string name="title_activity_chapter">ChapterActivity</string>
    <string name="page_image_description">Location Photo</string>
    <string name="previous_chapter">Previous Chapter</string>
    <string name="next_chapter">Next Chapter</string>
    <string name="shortlong_cutoff_ratio">"0.7"</string>
    <string name="eula_disagree">I Disagree</string>
    <string name="eula_agree">I Agree</string>
    <string name="about_town">About Oak Glen</string>
    <string name="about_app">About This App</string>
    <string name="title_activity_about_town">AboutTownActivity</string>
    <string name="about_short">About</string>
    <string name="wifi_auto_connect">Wi-Fi Auto-Connect</string>
    <string name="maps_by_scout">Map rendering powered by Scout</string>
    <string name="skobbler_attrib_url">http://developer.skobbler.com/attribution</string>
    <string name="feedback">Feedback</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="api_key_for_development_use_only" translatable="false">
        4cd6cf0a7b00b9bd5399e8b7f8229a92
    </string>
    <string name="feedback_intro">
        Thank you for using the Discover Glen Oak app.
        We\'d like to ask a few questions about your experience.
    </string>
    <string name="app_rating_question">How would you rate this app?</string>
    <string name="comments_question">Finally, what would you like to tell us about your experience with this app that has not been covered above?</string>
    <string name="recent_visit_question">Have you recently visited the town of Oak Glen?</string>
    <string name="visit_rating_question">How would you rate your visit?</string>
    <string name="relevance_question">How would you say this app enhanced your visit?</string>
    <string name="age_question">First, we\'d like to get an idea of who is using this app. What is your age?</string>
    <string name="permission_explanation">
        An important part of this discovery app\'s experience is the ability to connect to CIM EDUCATIONAL BEACONS. When you reach a
        specific photo location the app will automatically stream fun and educational content to your smart devices. This feature
        depends on specific secure wi-fi beacons, which have been strategically placed in specific locations. In order to
        automatically connect to these beacons, the Android system permissions to Access and Change Wi-Fi state, as well as to
        receive coarse location information, are required.\n\n
        To enable the CIM EDUCATIONAL BEACONS feature, please turn on Wi-Fi Auto-Connect from the app\'s menu, and accept the
        permissions if prompted. If you have permanently denied the permissions (by selecting the \"Never ask again\" checkbox), then
        you can re-enable them through your device\'s settings.
    </string>
    <string-array name="visitedOptions">
        <item>No, but I plan to soon</item>
        <item>No, and I don\'t plan to</item>
        <item>Yes, I have visited recently</item>
        <item>I\'m currently in Oak Glen</item>
    </string-array>
    <string-array name="ageOptions">
        <item>Prefer not to answer</item>
        <item>Under 12</item>
        <item>12–17</item>
        <item>18–24</item>
        <item>25–34</item>
        <item>35–44</item>
        <item>45–54</item>
        <item>55–69</item>
        <item>70–89</item>
        <item>90 or higher</item>
    </string-array>
    <string name="route_loading">Getting location and calculating route</string>
    <string name="map_loading">Map Loading</string>
    <string name="walking_distance">within walking distance</string>
    <string name="calculating_route">Calculating route</string>
    <string name="content_description_return">Return</string>
    <string name="about_app_text_0" format="string" type="string">
        Welcome to beautiful Oak Glen, California and thank you for your purchase of the “Oak Glen
        Discovery eAdventure”. A fun and adventurous way to discover “The Glen”.\n
        \n
        <b>Start your Journey:</b>\n
        Your adventure begins when you either “tap”
    </string>
    <string name="about_app_text_1" format="string" type="string">
        on@ @
    </string>
    <string name="about_app_text_2" format="string" type="string">
        or@ @
    </string>
    <string name="about_app_text_3" format="string" type="string">
        \n
        By tapping on the@ @
    </string>
    <string name="about_app_text_4" format="string" type="string">
         a map will be displayed with your current location and “pins” that
        represent the locations of the hidden photo items. Tap on a pin and follow the map to the
        selected location.\n
        \n
    </string>
    <string name="about_app_text_5" format="string" type="string">
        If you should choose the@ @
    </string>
    <string name="about_app_text_6" format="string" type="string">
        a gallery of photographs will be displayed. Tap on a photo
        and the map will launch with guidance to the location of the selected item.\n
        \n
    </string>
    <string name="about_app_text_7" format="string" type="string">
        <b>Reach your Destination:</b>\n
        When you reach a destination look for the “Pop-up” text on your device for educational
        information and fun facts about the destination object.\n
        \n
        At some destinations, the app will automatically stream fun and educational (location specific)
        content to your smart device.\n
        \n
        <b>Keep Score:</b>\n
        Once you reach a destination a “Red Apple” will appear in the corner of the photo on your
        device. A “Red Apple” will also be added to the Main Page of this app. Locate all the Photo
        destinations and you may receive a valuable bonus!\n
        \n
        <b>One important note:</b> As you travel to your chosen location the map on your device will
        display the shortest, straight line, route. <b>PLEASE STAY ON DESIGNATED PATHS AND
        ROADWAYS!</b> Though the “straight line” path may be tempting it is important that you respect
        the area through which you are trekking.\n
        \n
        \n
        “Happy Travels”,\n
        \n
        Cyrano\n
    </string>
    <string name="aloha">There are dozens of beautiful waterfalls on Oahu. One of the most popular is located at the top end of
    the Manoa Valley and is where the beautiful Manoa Falls is located. It is also considered the 19th most
    haunted spot on Oahu. Long ago only the Ali\’i (royalty class) were allowed to dwell in this valley. They
    considered themselves living gods. On many nights (especially Po\’kane – night of the walking dead)
    their spirits walk the path there. It is also said that powerful entities that were never born also roam
    there.</string>
    <string name="ana_puka">Kaneana Cave is a magical site on Oahu\'s leeward (west) drift, practically as far away as you can get on
    the island close where the pavement ends. It sits at the base of a precipice outcropping and is around
    100 feet (30 m) high and 450 feet (137 m) deep. The cave is estimated to be around 150,000 years of
    age and was once submerged, cut out by the relentless ebb and flow of the sea.</string>
    <string name="hao_hakahaka">Kālua is a customary Hawaiian cooking strategy that uses an imu, a sort of underground broiler. The
    word kālua, which truly signifies "to cook in an underground broiler", may likewise be utilized to depict
    the sustenance cooked in this way, for example, kālua pig or kālua turkey, which are ordinarily served at
    luau feasts. Luau, in Hawaiian is really the name of the taro leaf, which when youthful and little is
    cooked like spinach. The customary luau was eaten on the floor over lauhala (leaves of the hala tree
    were weaved together) mats.</string>
    <string name="honu">When born, green sea turtles are only 5 cm (2 in) long. But they grow up to
    1.5 meters (5 ft) in length and can weigh over 300 kg (700 lbs), making them the largest of the hardshell
    sea turtles. Green sea turtles are able to hold their breath for hours at a time. Because they are coldblooded,
    the temperature of the water affects their ability to hold their breath. In colder water they can hold
    their breath for longer. To reach their nesting grounds, green turtles migrate long distances, traveling back
    to the beaches where they were born. After mating in the shallow waters near shore, female turtles climb
    onto the beach and lay their eggs in a pit. They lay 100-200 eggs at a time and leave them alone for 2
    months before they hatch. Once the baby turtles hatch, they must crawl to the water and avoid a multitude
    of predators, including birds and crabs.</string>
    <string name="hooikaika_kino">Warfare amongst the tribal chieftains (ali\'i) of the Hawaiian islands was common, with fierce battles
    typically fought to establish political boundaries and during succession disputes. Raiding was frequent.
    As the scale of warfare increased, the chieftains of Hawaii and Maui became increasingly powerful as
    they could draw on the larger populations and resources of their islands to support military operations.
    By the 1780s warfare was increasingly institutionalized, with formal rules and rituals. The ali\'i built and
    consecrated luakini (state temples) and conducted sacrifices, prayers, and ceremonies before launching
    campaigns. The mystical Kahunas were consulted to determine the best time for military operations. The
    chieftains increasingly drilled their troops and engaged in a technology race of sorts with firearms,
    cannon and other weapons acquired obtained from western traders. As wealth accumulated through
    trading with western visitors, opportunities for conflict between the chieftains also increased.</string>
    <string name="i_a">With a knowledge of fishing areas and seasons and an array of implements that included hooks and
    lines, lures, nets, basket traps, poisonous plants, and spears, a fisher supplied his family or his ali\‘i with
    fish and shellfish from streams, fishponds, reefs, and ocean. Sometimes the catch was so huge, fish
    could be fed to the pigs and dogs, with some left over to dry as food or fuel for fire; some was left to
    rot. Those fishers that could supply large amounts of fish from ponds or catches at sea were believed to
    possess mana kupua, or supernatural power, to attract fish at will or make them multiply. Successful
    fishing implements, such as hooks or cowry shell lures became famous and were prized, passed on to
    heirs, and sometimes fought over.</string>
</resources>